--- a/Projekt2/mysite/filmy/templates/filmy/format_filmu.html
+++ b/Projekt2/mysite/filmy/templates/filmy/format_filmu.html
@@ -1,7 +1,9 @@
 {% if format_filmu_list %}
     <ul>
-    {% for format_filmu in format_filmu_list %}
-    <li><a href="/filmy/{{format_filmu.id}}">{{ format_filmu }}</a></li>
+    {% for format_filmuview in format_filmu_list %}
+    <li>
+        <a href="/filmy/{{ format_filmuview.id }}/">{{ format_filmuview }}</a>
+    </li>
     {% endfor %}
     </ul>
 {% else %}
