index.html przenosi :parking:

--- a/Projekt2/mysite/filmy/templates/filmy/film.html
+++ b/Projekt2/mysite/filmy/templates/filmy/film.html
@@ -1,5 +1,6 @@
 {% if film_list %}
     <ul>
+        Filmy:
     {% for filmview in film_list %}
     <li>
         <a href="/filmy/{{filmview.id}}/">{{ filmview }}</a>
