--- a/Projekt2/mysite/filmy/templates/filmy/rodzaj.html
+++ b/Projekt2/mysite/filmy/templates/filmy/rodzaj.html
@@ -1,5 +1,6 @@
 {% if rodzaj_list %}
     <ul>
+        Rodzaje:
     {% for rodzajview in rodzaj_list %}
     <li>
         <a href="/filmy/{{rodzajview.id}}/">{{rodzajview }}</a>
