--- a/Projekt2/mysite/filmy/templates/filmy/cena.html
+++ b/Projekt2/mysite/filmy/templates/filmy/cena.html
@@ -1,8 +1,9 @@
 {% if cena_list %}
     <ul>
+        Zakres cen:
     {% for cenaview in cena_list %}
     <li>
-        <a href="/filmy/{{ cenaview.id }}/">{{ cenaview }}</a>
+        <a href="/filmy/cena{{ cenaview.id }}/">{{ cenaview }}</a>
     </li>
     {% endfor %}
     </ul>
