--- a/Projekt2/mysite/filmy/templates/filmy/index.html
+++ b/Projekt2/mysite/filmy/templates/filmy/index.html
@@ -2,7 +2,7 @@
     <ul>
     {% for index in index_list %}
     <li>
-        <a href="/filmy/{{ index.id }}/">{{index }}</a>
+        <a href="/filmy/{{index }}/">{{index }}</a>
     </li>
     {% endfor %}
     </ul>
